# Lightshield_proxy

./: .env  .gitignore  Dockerfile  Jenkinsfile  README.md  __init__.py  auth.py  compose-services.yaml  config_prod.json  docker-compose.yaml  nginx.conf  pyproject.toml  rate_limiter.py  run.py  run_clean.py  server.py  settings.py  tests.py
exceptions/: __init__.py
lightshield/proxy/: endpoint.py  main.py
lua_scripts/: update.lua
middleware/: auth.py  ratelimit.py
rate_limiting/: app_limiter.py  limiter.py  method_limiter.py
server/: __init__.py  league.py  league_exp.py  match.py  spectator.py  summoner.py
test files/: client.py  proxy.py  target.py
