[tool.poetry]
name = "Lightshield_Proxy"
version = "1.0.0"
description = "Proxy and ratelimiting service sed for the Lightshield framework or as standalone proxy."
authors = ["Doctress"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
pytz = "^2021.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
